--- a/app/assets/stylesheets/main/sidebar.scss
+++ b/app/assets/stylesheets/main/sidebar.scss
@@ -72,7 +72,7 @@
             box-shadow: 0 0 0 1px $dark-tan, 0 4px 12px 0 rgba($color: $text, $alpha: 0.2);
             width: 300px;
             position: absolute;
-            z-index: 1;
+            z-index: 2;
             top: 58px;
             // border: 1px solid rgba($color: black, $alpha: 0.18);
             border-radius: 6px;
@@ -221,7 +221,7 @@
             position: fixed;
             height: 100vh;
             width: 100vw;
-            
+            z-index: 2;
             top: 0;
             left: 0;
             background: rgba($color: #000000, $alpha: 0.45);
@@ -622,6 +622,7 @@
                         }
                         .user-search {
                             position: absolute;
+                            z-index: 2;
                             min-height: 44px;
                         }
                         ul.search-results {
@@ -707,8 +708,13 @@
         }
     }
     .sidebar-section {
+        position: relative;
+        &.dm{
+            z-index: 0;
+        }
         &.c {
             margin-top: 14px;
+            z-index: 1;
         }
         font-size: 13.5px;
         .section-head-container {
